# pandas_dataframe_convert

./: .gitignore  LICENSE  pyproject.toml  readme.md
src/pandas_dataframe_convert/: __init__.py  dataframe_convert.py  make_sample.py  sample.pkl
