[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "panvert"
authors = [{name = "Doug Ransom", email = "doug@ransom.vip"}]
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependancies = ['flit','pandas']

[project.urls]
source="http://TODO."
[project.scripts]
dataframe_convert="dataframe_convert:main"